--- a/TP_3and4/Cargo.toml
+++ b/TP_3and4/Cargo.toml
@@ -11,3 +11,9 @@ hex-literal = "0.4.1"
 inquire = "0.7.5"
 sha1 = "0.10.6"
 sha2 = "0.10.8"
+
+# example ./attack/main.rs
+[[example]]
+name = "attack"
+path = "attack/main.rs"
+
